--- a/meditrials/TextProcessing_Models.ipynb
+++ b/meditrials/TextProcessing_Models.ipynb
@@ -7652,20 +7652,6 @@
     "filename = './assets/modelo.joblib'\n",
     "dump(p, filename)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5. Conclusiones finales"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Una vez construidos los tres diferentes modelos, se observa a partir de sus respectivas métricas,el modelo que mejor cumple el objetivo de negocio: clasificar a los pacientes que son elegibles para ensayos clínicos de cancer; es el de regresión logistica, con una puntuación F1 promedio de 0.80, muestra ser un modelo adecuado y confiable para la tarea planteada. Detallando un poco más acerca de su comportamiento, se observa que para los elegibles (0), el recall es menor a la precisión, esto indica que hay un mayor número de falsos negativos para esta categoría. En consecuencia, se observa el comportamiento opuesto para los elegibles."
-   ]
   }
  ],
  "metadata": {
@@ -7678,7 +7664,7 @@
    "hash": "6cd609ca253b333b2172794b0715753df0f4bdfad7e634d06155993fb85c6fd4"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
